--- a/src/app/components/dialog/dialog.component.css
+++ b/src/app/components/dialog/dialog.component.css
@@ -6,7 +6,7 @@
     width:100%;
     height: 100%;
     background: rgba(10,10,10,0.3);
-    z-index: 888;
+    z-index: 10000;
 }
 .dialog_form {
     display: block;
